# demo-multimodal

./: .gitignore  README.md  main.py  multimodal_retrieval_amazon_reviews.ipynb  pyproject.toml
Phi-3-Vision-MLX/: requirements.txt
Phi-3-Vision-MLX/assets/: tutorial_1.py
