[project]
name = "demo-multimodal"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "einops>=0.8.1",
    "ftfy>=6.3.1",
    "ipykernel>=6.29.5",
    "opencv-python>=4.11.0.86",
    "pymilvus>=2.5.8",
    "regex>=2024.11.6",
    "scipy>=1.15.3",
    "timm>=1.0.15",
    "torch>=2.7.0",
    "torchvision>=0.22.0",
    "transformers==4.40.2",
]
